# gnnpcsaftapp

./: .gitignore  README.md  gnnpcsaft.spec  pyproject.toml  pyrightconfig.json  release-workflow.ps1  release-workflow.sh  requirements.txt
.github/workflows/: releases.yml
app/: about_screen.py  gnnpcsaft.kv  main.py  mixture_screen.py  pure_screen.py  test.py  utils.py  utils_data.py  utils_mix.py  utils_pure.py
app/_data/: co2_binary.parquet  co2_ternary.parquet  e_h_binary.parquet  e_h_ternary.parquet  gamma_binary.parquet  lle_binary.parquet  lle_ternary.parquet  rho_pure.parquet  st_binary.parquet  st_pure.parquet  st_ternary.parquet  vp_binary.parquet  vp_pure.parquet
hooks/: hook-feos.py  hook-gnnepcsaft_mcp_server.py  hook-kivy_matplotlib_widget.py  hook-rdkit.py
